--- a/portfolio.html
+++ b/portfolio.html
@@ -49,7 +49,7 @@
      <!-- Footer -->
      <footer class="footer">
         <!-- replace with your own email address -->
-        <a href="mailto:hello@ash.dev" class="footer__link">hello@ash.dev</a>
+        <a href="mailto:ashwinr63@gmail.com" class="footer__link">Ashwin</a>
         <ul class="social-list">
             <li class="social-list__item">
                 <a class="social-list__link" href="https://codepen.io">
