Small Changes & Additions to the pages

--- a/portfolio.html
+++ b/portfolio.html
@@ -43,8 +43,8 @@
     <div class="portfolio-item-individual">
         <p>React Web Store</p>
         <img src="img/portfolio-details.jpg" alt="">
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe et amet tenetur! Fugit sequi optio corrupti fugiat ducimus consequatur incidunt?</p>
-        <p>Voluptatibus, soluta blanditiis! Incidunt ea unde itaque illo molestiae eligendi sint culpa nobis voluptas sapiente voluptate, magnam ipsum eius earum?</p>
+        <p>Basically an Ecommerce Webstore</p>
+        <p>This website gives out standalone application for Everyday Retail ecommerce Platform which inturn can be used to provide more greater information on the size of the product being sold.</p>
     </div>
      <!-- Footer -->
      <footer class="footer">
