--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h1 class="section__title section__title--intro">
             Hi, I am <strong>Ashwin Ramkumar</strong>
         </h1>
-        <p class="section__subtitle section__subtitle--intro">front-end dev</p>
+        <p class="section__subtitle section__subtitle--intro">Full Stack Dev</p>
         <img src="img/devash.jpg" alt="a picture of Ashwin Ramkumar smiling" class="intro__img">
     </section>
     
